# md2docx-mcp-server

./: .gitignore  .gitmodules  CHANGELOG.md  DEPLOYMENT_GUIDE.md  MCP_INSTALLATION_GUIDE.md  MD2PPTX_INTEGRATION_DESIGN.md  Q_CLI_USAGE_GUIDE.md  README.md  TOOLS_REFERENCE.md  pyproject.toml  server.py  server_legacy.py  test_unified_converter.py
config/: converter_config.json
core/: __init__.py  config_manager.py  converter_manager.py  fixed_latex_renderer.py  image_converter.py  latex_compiler.py  md2latex_adapter.py  md2latex_adapter_v2.py  md2latex_enhanced.py  unified_converter_manager.py
docs/: README.md
docs/design/: MD2LATEX_INTEGRATION_DESIGN.md
docs/examples/: 区块链技术专业演示.md
docs/guides/: PPTX_TEMPLATE_GUIDE.md
md2latex/: __init__.py
md2latex/configs/: academic_config.yaml  chinese_config.yaml  default_config.yaml
md2latex/core/: __init__.py  converter.py  latex_renderer.py
md2latex/templates/: academic_template.tex  basic_template.tex  chinese_book_template.tex
output/latex/: table_test_token_based.tex  test_academic.tex  test_academic_paper.tex  test_chinese.tex  test_compatible_images.tex  test_complete_image_support.tex  test_image_formats.aux  test_image_formats.out  test_image_formats.tex
prompts/: md2pptx_intelligent_generator.md
templates/latex/: ctexbook_template.tex  enhanced_template.tex
templates/latex/configs/: chinese_optimization.yaml
tests/: README.md
tests/images/: create_test_image.py  test_image.tiff
tests/samples/: simple_test.md  test_academic.md  test_chinese.md  test_chinese_fixed.md  test_chinese_level_fixed.md  test_compatible_images.md  test_complete_image_support.md  test_document.md  test_english_tech.md  test_image_formats.md  test_math_only.md  test_multilang_code.md  test_no_math.md  test_simple.md
